@@ -5,6 +5,9 @@ Changelog
 1.0.23 (unreleased)
 -------------------
 
+- Correctly handles partly-available whole-day allocations. Fixes #129.
+  [href]
+
 - No longer raise an exception to the user if a nonexistant reservation is
   removed from 'your reservations'. Fixes #123.
   [href]
